static/css/style.css
/****************************
SCROLL&STRAP TEMPLATE V 1.0.
http://sitediscount.ru
******************************/


/********************* -= [ TABLE OF CONTENTS ] =- ***************

GLOBAL STYLES................................30
THEME COLORS.................................48
CUSTOM BACKGROUND STYLES.....................70
HEADER.......................................79
NAVIGATION MENU.............................268
CUSTOM SLIDER STYLE.........................416
TYPOGRAPHY..................................472
TITLE STYLES................................501
SECTIONS....................................527
ARROW IN CONTACT SECTION....................673
ELEMENTS....................................698
	- BADGES................................901
BROWSER SHOTS EFFECTS.......................930
FOOTER & FOOTER ELEMENTS...................1025
CUSTOM BUTTONS.............................1157
	- CUSTOM BUTTONS SIZES.................1413
PARALLAX EFFECTS...........................1474
@MEDIA.....................................1642
FORM.......................................1785


*****************************************************************/

/************************* GLOBAL STYLES *******************/
	body{
		background: url(../img/png.png) repeat;
		font-size:13px;
	}
	.main-wrapper
	{
		height: 100%;
		margin-left: auto;
		margin-right: auto;
		max-width: 100%;
		min-height: 100%;
		min-width: 100%;
		width: 100%;
		overflow:hidden;
	}
	/********************* / GLOBAL STYLES ********************/
	
	/**********************  THEME COLORS ***********************/
		.main-color{
			color:#f89406;
		}
		.main-br-color{
			background-color:#f89406;
		}
		
		.main-color-line{
			border-bottom:2px solid #f89406;
			display:inline-block;
			padding-bottom:1px;
		}
		.color-white{
			color:rgba(250, 250, 250 , 0.02);
		}
		.color-white:hover{
			color:rgba(250, 250, 250 , 1);
		}
		
	/********************** /THEME COLORS *************************/
	
	/********************** CUSTOM BACKGROUND STYLES *************************/
	
	.lines-bg-color {
		background: #f89406 url(../img/line_bg.png) top left repeat;
	}
	.dott-bg{
		background-image:url(../img/section-top-bg.png)repeat;
	}
	
	/************************ HEADER ************************************************/
	section #header-section {	
		padding-bottom:70px;
		display:inline-block;
		min-height:750px;
		position:relative;
		padding-top:0px;
		-webkit-box-shadow: none;
		-moz-box-shadow:  none;
		box-shadow:  none;
		overflow:hidden;
	
	}

		
		#header-section {
			background: #222 url(../img/background1.jpg) bottom center repeat fixed;
			height: 650px;
			height: 650px;
			width: 100%;
			max-width:100%;
			z-index: -999;
			padding-top:0px;
			
			}
			#header-section .hero-unit {
				
				
				z-index: 1;
			}
			
			#header-section .wrap-hero{
				position:fixed;
				top:45px;
				text-align:center;
				width:100%;
				left:0px;
				min-width:100%;
				display:block;
			
			}
			#header-section .logowrap{
				position:absolute;
				top:10px;
			}
			#header-section .hero-unit.hide{
				
				 filter: alpha(opacity=0);
				 filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); /* IE 5.5+*/
				-moz-opacity: 0; /* Mozilla 1.6 - */
				-khtml-opacity: 0; /* Konqueror 3.1, Safari 1.1 */
				opacity: 0; /* CSS3 - Mozilla 1.7b +, Firefox 0.9 +, Safari 1.2+, Opera 9+ */
					-moz-transition: opacity 2s ease-in-out;
				-o-transition: opacity 2s ease-in-out;
				-webkit-transition: opacity 2s ease-in-out;
				-ms-transition: opacity 2s ease-in-out;
				transition: opacity 2s ease-in-out;

			}
			#header-section .hero-unit{
				background:none;
				-moz-transition: opacity 2s ease-in-out;
				-o-transition: opacity 2s ease-in-out;
				-webkit-transition: opacity 2s ease-in-out;
				-ms-transition: opacity 2s ease-in-out;
				transition: opacity 2s ease-in-out;
				text-align:center;
				max-width:1350px;
				color:#fff;
				text-shadow: 0 1px 2px #000000;	
				margin-left:auto;
				margin-right:auto;
				
			}
			.inner-wrap-hero{
				padding:10px 20px;
				text-align:center;
			}
			
			#header-section .hero-unit h1 span{
				
				/*margin-top:0px;
				font-size:65px;*/
				display:inline-block;
				font-size:32.5px;
				color: #fff/*rgba(250, 250, 250, 1)*/;
				line-height: 40px;
				margin:5px 0px -5px;
				padding:10px 20px;
				font-weight:300;
				text-shadow:none;
				filter: alpha(opacity=0);
					filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
					-moz-opacity: 0;
					-khtml-opacity: 0;
					opacity: 0;
					transform: scale(2,4);
					-ms-transform: scale(2,4); /* IE 9 */
					-webkit-transform: scale(2,4); /* Safari and Chrome */
					-o-transform: scale(2,4); /* Opera */
					-moz-transform: scale(2,4); /* Firefox */
						-moz-transition: all 0.7s ease-in-out;
						-o-transition: all 0.7s ease-in-out;
						-webkit-transition:all  0.7s ease-in-out;
						-ms-transition: all  0.7s ease-in-out;
						transition: all 0.7s ease-in-out;
				
			}
			
			#header-section .hero-unit h1 span.active{
					filter: alpha(opacity=100);
					filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
					-moz-opacity: 1;
					-khtml-opacity: 1;
					opacity: 1;
					transform: scale(1,1);
					-ms-transform: scale(1,1); /* IE 9 */
					-webkit-transform: scale(1,1); /* Safari and Chrome */
					-o-transform: scale(1,1); /* Opera */
					-moz-transform: scale(1,1); /* Firefox */
					
			}
			
			
			
			#header-section .hero-unit span{
				
				margin:10px 0 10px;
				display:inline-block;
				font-weight:300;
				
			}
			
			#header-section .hero-unit span:first-child{
				font-size: 70px;
				border-top: 1px dotted rgba(250, 250, 250, 1);
				border-bottom: 1px dotted rgba(250, 250, 250, 1);
				background: rgba(0, 0, 0, 0.0.5);
				line-height: 60px;
				font-weight:400;
				
			
			}
			
			.goprice{
				margin-top:30px;
				display:inline-block;
			}	
/* ... */

